added autoconfig for graphit.

--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -41,6 +41,8 @@ WSGISocketPrefix /tmp/wsgi
 
         Alias /content/ /opt/graphite/webapp/content/
         <Location "/content/">
+                Order allow,deny
+                Allow from all		 
                 SetHandler None
         </Location>
 
